package ru.android.obstacles;

public interface Obstacle {
    void info();
}
